--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.0",
+    "fsevents": "*"
   }
 }
