--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "devDependencies": {
     "fsevents": "*",
     "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-cssimport": "^6.0.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-watch": "^5.0.1"
   }
 }
